# cryptoscript

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
examples/: demo_code.json  input.json  local_demo_code.json  local_query.json  query.json
src/: an_elem.rs  an_elem_return.rs  arbitrary.rs  cli.rs  elem.rs  elem_type.rs  elems.rs  elems_all.rs  elems_input.rs  elems_input_output.rs  elems_input_output_or.rs  elems_input_output_singleton.rs  elems_list.rs  elems_list_cons.rs  elems_list_input.rs  elems_list_input_output.rs  elems_list_input_output_cons.rs  elems_list_nil.rs  elems_or.rs  elems_singleton.rs  executor.rs  instruction.rs  json_template.rs  lib.rs  location.rs  main.rs  parse.rs  parse_nom.rs  parse_utils.rs  query.rs  rest-api.rs  rest_api.rs  restack.rs  stack.rs  typed_instr.rs  typed_instrs.rs  typed_instruction.rs  typed_instructions.rs  types.rs  types_scratch.rs  (+2 more)
src/types/: context.rs  empty.rs  type_id.rs
src/types/type_id/: map.rs
