[package]
name = "cryptoscript"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }

actix-web = { version = "4.0.1", default-features = false, features = ["macros"], optional = true }
reqwest = { version = "0.11.10", features = ["json"], optional = true }

clap = { version = "3.1.6", features = ["derive"], optional = true }
enumset = { version = "1.0.8", features = ["serde"] }
generic-array = "0.14"
hex = "0.4"
indexmap = "1.5"
nom = "7.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["arbitrary_precision", "preserve_order"], optional = true }
sha2 = "0.9"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"], optional = true }
tokio-stream = { version = "0.1.8", optional = true }
thiserror = "1.0"
typenum = "1.15.0"

[dev-dependencies]
hex-literal = "0.3"
quickcheck = "1.0.3"
sha3 = "0.9"

[features]
build-bin = ["actix-web", "clap", "reqwest", "serde_json", "tokio", "tokio-stream"]
build-wasm = ["wasm-bindgen"]
default = ["build-bin"]

[[bin]]
name = "cryptoscript"
path = "src/main.rs"
required-features = ["build-bin"]

[[bin]]
name = "rest-api"
path = "src/rest_api.rs"
required-features = ["build-bin"]

